# neo-ai

./: .gitignore  Makefile  README.md  main  main.c
imageProcessing/src/: imageProcessing.c  imageProcessing.h  test  test.c
imageProcessing/tests/: Makefile  testImageProcessing.c  test_runner
linearAlgebra/: CMakeLists.txt  Makefile
linearAlgebra/src/: Makefile  main.c  matrix.c  matrix.h  matrixInverse  matrixInverse.c  matrixInverse.h  test
linearAlgebra/tests/: Makefile  haha  testMatrix.c  testMatrixInverse.c  test_framework.c  test_framework.h  test_matrix.c  test_runner  test_runner-matrix.gcda  test_runner-matrix.gcno  test_runner-testMatrix.gcda  test_runner-testMatrix.gcno  test_runner-test_framework.gcda  test_runner-test_framework.gcno
neuralNerwork/src/: main.c  neuralNetwork.c  neuralNetwork.h
neuralNerwork/tests/: testNeuralNetwork.c
test_framework/: README.md
test_framework/src/: test_framework.c  test_framework.h
test_framework/tests/: testFrameWork.c
